--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -1,8 +1,22 @@
-Flask==1.1.4
-alembic==1.4.2
-Flask-SQLAlchemy==2.5.1
+alembic==1.11.1
+blinker==1.6.2
+click==8.1.3
+Flask==2.3.2
 Flask-Cors==3.0.10
-Flask-JWT-Extended==3.25.1
+Flask-JWT-Extended==4.5.2
+Flask-SQLAlchemy==3.0.5
+greenlet==2.0.2
+itsdangerous==2.1.2
+Jinja2==3.1.2
+Mako==1.2.4
+MarkupSafe==2.1.3
 nose2==0.12.0
+psycopg2-binary==2.9.6
+PyJWT==2.7.0
+python-dateutil==2.8.2
+python-editor==1.0.4
 pytruth==1.1.0
-psycopg2==2.8.6
+six==1.16.0
+SQLAlchemy==2.0.17
+typing_extensions==4.6.3
+Werkzeug==2.3.6
