--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -1,11 +1,14 @@
 alembic==1.11.1
 blinker==1.6.2
+certifi==2023.5.7
+charset-normalizer==3.1.0
 click==8.1.3
 Flask==2.3.2
 Flask-Cors==3.0.10
 Flask-JWT-Extended==4.5.2
 Flask-SQLAlchemy==3.0.5
 greenlet==2.0.2
+idna==3.4
 itsdangerous==2.1.2
 Jinja2==3.1.2
 Mako==1.2.4
@@ -16,7 +19,9 @@ PyJWT==2.7.0
 python-dateutil==2.8.2
 python-editor==1.0.4
 pytruth==1.1.0
+requests==2.31.0
 six==1.16.0
 SQLAlchemy==2.0.17
 typing_extensions==4.6.3
+urllib3==2.0.3
 Werkzeug==2.3.6
